--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -47,7 +49,8 @@
     "ts-jest": "^23.10.5",
     "typescript": "^3.5.3",
     "vue-jest": "^3.0.4",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.39.2"
   },
   "eslintConfig": {
     "root": true,
